2007-02-04 Braden McDaniel  <braden@endoframe.com>

	Use pkg-config to check for FreeType.

	* configure.ac: Use pkg-config to check for FreeType; add
	freetype2 to OPENVRML_PKG_REQUIRES if Text node rendering is
	enabled.
	* openvrml.pc.in: Removed FREETYPE_LIBS from Libs; this is now
	covered by Requires.

2007-02-03 Braden McDaniel  <braden@endoframe.com>

	Fixed PROTO eventIn and eventOut lookup functions to try the
	"set_" prefix and "_changed" suffix (respectively) when looking up
	event_listener and event_emitter objects.

	* src/libopenvrml/openvrml/browser.cpp
	(proto_node::do_event_listener(const std::string &)): Prepend
	"set_" to the eventIn name if the passed value is not found in the
	eventIn map.
	(proto_node::do_event_emitter(const std::string &)): Append
	"_changed" to the eventOut name if the passed value is not found
	in the eventOut map.

2007-02-03 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Require GLib >= 2.6 since openvrml-gtkplug and
	openvrml-player use GOption.

2007-01-23 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fail if pkg-config doesn't find libglade-2.0,
	libgnomeui-2.0, or libcurl when openvrml-player is configured to
	be built.

2007-01-23 Braden McDaniel  <braden@endoframe.com>

	openvrml-player needs libgnomeui; not just libgnome.

	* configure.ac: Check for libgnomeui; export GNOMEUI_CFLAGS and
	GNOMEUI_LIBS.
	* src/openvrml-player/Makefile.am
	(AM_CXXFLAGS): Use GNOMEUI_CFLAGS.
	(AM_LDFLAGS): Use GNOMEUI_LIBS.
	* src/openvrml-player/player.cpp
	(main(int, char *[])): Call gnome_program_init with
	LIBGNOMEUI_MODULE.

2007-01-23 Braden McDaniel  <braden@endoframe.com>

	Added openvrml-player, a stand-alone container for
	openvrml-gtkplug; libcurl is used for resource fetching.

	* configure.ac: Output src/openvrml-player/Makefile; check for
	libglade, libgnome, and libcurl; allow building openvrml-player to
	be disabled.
	* src/Makefile.am (SUBDIRS): Added openvrml-player.